# Naive-Framework

./: .gitignore  Facade.py  LICENSE  README.md  Wrapper.py  coef.py  desktop.ini  director.py  eval.py  exp.py  facade.py  guise.py  ops.py  pad.py  pyproject.toml  register.py
config/: bd_algo4_dqn.toml  breakout.toml  demon_galaxian.toml  demon_phoenix.toml  demon_phoenix_algo2.toml  demon_phoenix_algo2_DQN.toml  die_config_test.py  double_atari.toml  double_shooting.toml  double_shooting_fast_switch.toml  dp_algo2_DQN.toml  dp_algo3_DQN.toml  dp_algo4_DQN.toml  env_info.toml  exp0.toml  galaxian_phoenix.toml  galaxian_phoenix_algo3.toml  gp_algo1_DQN.toml  mappings.toml  single_demon_attack_ppo.toml  single_env.toml  single_galaxian_DQN.toml
