[tool.poetry]
name = "naive-framework"
version = "0.0.229"
description = "A naive RL framework"
authors = ["huhuhu0420 <ghostcheng.00@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "env_container", from = "packages"},
]

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}
stable-baselines3 = {extras = ["extra"], version = "^2.2.1"}
torchvision = {version = "^0.16.2+cu121", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.1.2+cu121", source = "pytorch-gpu-src"}
torch = {version = "^2.1.2+cu121", source = "pytorch-gpu-src"}
di-engine = "^0.5.1"
jinja2 = "<3.1.0"
itsdangerous = "2.0.1"
werkzeug = "2.0.3"
numba = "^0.59.1"
transformers = "^4.41.2"

numpy = "^1.26.4"
[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
